--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <i class="fas fa-bookmark"></i>
       </div>
       <div class="logo-text">
-        <span class="logo-title">MarkFlow</span>
+        <span class="logo-title">PinPoint
+ 
+</span>
       </div>
     </div>
     <div style="width: 44px;"></div>
@@ -36,7 +38,7 @@
         <i class="fas fa-bookmark"></i>
       </div>
       <div class="logo-text">
-        <span class="logo-title">MarkSave</span>
+        <span class="logo-title">Shelf</span>
         <span class="logo-subtitle">Bookmark Manager</span>
       </div>
     </div>
