Implemented dark theme toggle and updated script.js file

--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
 
   <!-- Quick Actions -->
   <div class="quick-actions" id="quickActions">
+    <button id="themeToggle" class="action-btn">
+  <i class="fas fa-moon"></i>
+  Dark
+</button>
+
     <button class="action-btn" id="importBtn">
       <i class="fas fa-file-import"></i>
       <span>Import</span>
